# game

./: .dockerignore  .gitignore  Cargo.toml  docker-compose.yml  readme.md  scene.blend  status.md
.github/workflows/: asset_manager.yml  asset_server.yml  db.yml  deploy.yml  exporter.yml  minio-build.yml  monitoring.yml
asset_server/: Cargo.toml  Dockerfile  readme.md
asset_server/.sqlx/: query-185c5ef5641f91e19a7b021bb939daa4a3e1dcfdfb90831e2bb939021a70256f.json  query-2677931b322cd526eed918d5bf3be8fa992610f2cc327790860be8b24080939e.json  query-8c77d5a36f14affb42d32f5736793a46837f24dfdf07e796c068393cc8325908.json  query-95cbb087096bf7297f029a8cc5671f2f8bf4f8cd74d907fea3aa681f4d504e75.json
asset_server/assets/: Fern_1.glb  Flower_3_Group.glb  Flower_4_Group.glb  Plant_1_Big.glb  Plant_7_Big.glb  Rock_Medium_3.glb  floor.glb  house.glb  placable1.glb  placable2.glb
asset_server/src/: fileupload.rs  main.rs  routes.rs  utils.rs  world_data.rs
asset_server/src/helpers/: error.rs  mod.rs  pg.rs  redis.rs  s3.rs
asset_server/src/models/: mod.rs  responses.rs
asset_server/src/routes/: chunk.rs  health.rs  mod.rs  model.rs
asset_server/src/routes/dev/: mod.rs  model.rs
asset_server/src/utils/: error.rs
client/: Cargo.toml  client.sln  icon.svg.import  project.godot
client/scenes/: Chunk.cs  Chunk.cs.uid  HttpHandler.cs  HttpHandler.cs.uid  MainScene.cs  MainScene.cs.uid  NodeHandler.cs  NodeHandler.cs.uid  main_scene.tscn
client/src/: camera.rs  main.rs  player.rs  web_assets.rs  world.rs
db/: Dockerfile  package.json  pnpm-lock.yaml  schema.prisma
db/migrations/: 20250316202441_create_world_data.up.sql
db/migrations/20251006172506_init/: migration.sql
db/migrations/20251006175956_init/: migration.sql
docs/: chunk.md
editor/: config.json  eslint.config.js  local.config.json  package.json  pnpm-lock.yaml  vite.config.js
editor/src-tauri/: Cargo.toml  tauri.conf.json
editor/src-tauri/capabilities/: default.json
editor/src-tauri/src/: config.rs  lib.rs
editor/src/lib/: types.d.ts
editor/src/lib/components/: app-sidebar.svelte  toolbar.svelte  version-switcher.svelte
editor/src/routes/: +layout.svelte  +page.svelte
editor/src/routes/add_asset/: +page.server.ts  +page.svelte  form.svelte  schema.ts
editor/src/routes/list_assets/: +page.svelte  +page.ts
lib_db/: Cargo.toml
lib_db/db/: diesel.toml
lib_db/db/migrations/: 20250316202441_create_world_data.up.sql
lib_db/src/: lib.rs  models.rs  schema.rs
login_server/: Cargo.toml
monitoring/: docker-compose.yml
monitoring/config/: gatus.yml  prometheus.yml
monitoring/exporter/: docker-compose.yml
monitoring/homepage/: services.yaml  settings.yaml  widgets.yaml
shared/src/: requests.rs
tools/: docker-compose.yml  minio_init.sh
tools/asset_manager/: .dockerignore  Dockerfile  package.json  pnpm-lock.yaml  svelte.config.js
tools/asset_manager/src/routes/: +layout.svelte  (+1 more)
tools/build_cache/: docker-compose.yml
tools/pgadmin_config/: preferences.json  servers.json
tools/valkey_config/: valkey.conf
world_server/: Cargo.toml
(+7 files in other folders)
