[package]
name = "asset_server"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_repr = "0.1.20"
axum = { version = "0.8.1", features = ["multipart"] }
axum-prometheus = "0.8"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "trace", "compression-gzip"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "derive"] }
rust-s3 = "0.35.1"
