[package]
name = "asset_server"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_repr = "0.1.20"
axum = { version = "0.8.1", features = ["multipart", "macros"] }
axum-prometheus = "0.8"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = [
    "fs",
    "trace",
    "compression-gzip",
    "limit",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "derive"] }
sha2 = "0.10"
s3-tokio = { git = "https://github.com/matus-barta/s3-tokio.git", features = [
    "no-verify-ssl",
    "http",
] }
rustls = "0.23.25"
serde_json = "1.0"
