[package]
name = "asset_server"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_repr = "0.1"
axum = { version = "0.8", features = ["multipart", "macros"] }
axum-prometheus = "0.9"
metrics = "0.24"
metrics-exporter-prometheus = "0.18"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = [
    "fs",
    "trace",
    "compression-gzip",
    "limit",
    "cors"
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "derive", "chrono"] }
sha2 = "0.10"
s3-tokio = { version = "0.39", features = ["no-verify-ssl", "http"] }
rustls = "0.23"
serde_json = "1.0"
dotenvy = "0.15"
url = "2.5.7"
shared = {path = "../shared"}
thiserror = "2.0"
redis = {version = "1.0", features = ["tokio-comp","tokio-rustls-comp","tls-rustls-insecure","connection-manager","aio"]}
