[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_web_asset = { git = "https://github.com/johanhelsing/bevy_web_asset.git", default-features = false }
bevy = "0.15.0"
bevy-inspector-egui = "0.29.1"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12.12", features = ["json"] }
serde_json = "1"
bevy_http_client = "0.7.0"
